#138 Prevent flickering due to loading state.

--- a/src/scss/components/_icon.scss
+++ b/src/scss/components/_icon.scss
@@ -52,6 +52,13 @@
 		height: $icon-spin-size-sm;
 		display: inline;
 	}
+
+	&.centered {
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+	}
 }
 
 .icon-remove-from-collection,
