--- a/src/scss/components/tag/_touch-selector.scss
+++ b/src/scss/components/tag/_touch-selector.scss
@@ -113,10 +113,4 @@
 			}
 		}
 	}
-
-	.loading {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
 }
